{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 43,
  "lineage": "0766c211-5356-6667-92a9-7bd9ef65aeff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:internet-gateway/igw-055e0a7f475cbdcbd",
            "id": "igw-055e0a7f475cbdcbd",
            "owner_id": "216350790660",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:route-table/rtb-07b490992056b333b",
            "id": "rtb-07b490992056b333b",
            "owner_id": "216350790660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "database-rt"
            },
            "tags_all": {
              "Name": "database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pbrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:route-table/rtb-008d5ca74e04a28ec",
            "id": "rtb-008d5ca74e04a28ec",
            "owner_id": "216350790660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055e0a7f475cbdcbd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d0a2fa728c5b8f8",
            "route_table_id": "rtb-07b490992056b333b",
            "subnet_id": "subnet-08d49183cb5d31ba7"
          },
          "dependencies": [
            "aws_route_table.dbrt",
            "aws_subnet.dbs_1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d321e97e3c10695",
            "route_table_id": "rtb-07b490992056b333b",
            "subnet_id": "subnet-0921092a848bf96b2"
          },
          "dependencies": [
            "aws_route_table.dbrt",
            "aws_subnet.dbs_2",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7e8f0952916186c",
            "route_table_id": "rtb-008d5ca74e04a28ec",
            "subnet_id": "subnet-0616a808a3101c35c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pbrt",
            "aws_subnet.pb_1",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec077e2b87f8b87",
            "route_table_id": "rtb-008d5ca74e04a28ec",
            "subnet_id": "subnet-0e10f828d2f68af7f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pbrt",
            "aws_subnet.pb_2",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:security-group/sg-030fb0bf9d59e347b",
            "description": "sg for project vpc allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030fb0bf9d59e347b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vpc_pr_sg",
            "name_prefix": "",
            "owner_id": "216350790660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_sg"
            },
            "tags_all": {
              "Name": "project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbs_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:subnet/subnet-08d49183cb5d31ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d49183cb5d31ba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216350790660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet-1"
            },
            "tags_all": {
              "Name": "database-subnet-1"
            },
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbs_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:subnet/subnet-0921092a848bf96b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0921092a848bf96b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216350790660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet-2"
            },
            "tags_all": {
              "Name": "database-subnet-2"
            },
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:subnet/subnet-0616a808a3101c35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0616a808a3101c35c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216350790660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:subnet/subnet-0e10f828d2f68af7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e10f828d2f68af7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216350790660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.av"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:vpc/vpc-04d488737f087d8a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06774c13ee7dfa75c",
            "default_route_table_id": "rtb-0d02832f424090b4a",
            "default_security_group_id": "sg-0b2890115e4d503ea",
            "dhcp_options_id": "dopt-08a68ba4d7331bdd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d488737f087d8a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d02832f424090b4a",
            "owner_id": "216350790660",
            "tags": {
              "Name": "pro-vpc"
            },
            "tags_all": {
              "Name": "pro-vpc"
            }
          }
        }
      ]
    }
  ]
}